Обновлены модели. Добавлены функции для Админа. Разделена логика для Репозиториев

--- a/KuzinShop/Views/Admin/EditProduct.cshtml
+++ b/KuzinShop/Views/Admin/EditProduct.cshtml
@@ -54,8 +54,7 @@
                     {
                         <input type="date" name="Attributes[@attr.AttributeId].DateValue" class="form-control" value="@attr.DateValue?.ToString("yyyy-MM-dd")" />
                     }
-
-                    <span asp-validation-for="Attributes[@attr.AttributeId]" class="text-danger"></span>
+                    @* <span asp-validation-for="Attributes[@attr.AttributeId]" class="text-danger"></span> *@
                 </div>
              }
         </div>
