--- a/KuzinShop/Views/Admin/Index.cshtml
+++ b/KuzinShop/Views/Admin/Index.cshtml
@@ -35,6 +35,17 @@
                 </div>
             </div>
         </div>
+
+        <div class="col-md-4">
+            <div class="card text-white bg-primary mb-3">
+                <div class="card-header">📊 Управление аттрибутами продуктов</div>
+                <div class="card-body">
+                    <p class="card-text">Создавайте, редактируйте и удаляйте аттрибуты.</p>
+
+                    <a asp-controller="Admin" asp-action="Attributes" class="btn btn-light">Перейти</a>
+                </div>
+            </div>
+        </div>
     </div>
 
     <hr />
