--- a/KuzinShop/Views/Shared/_Layout.cshtml
+++ b/KuzinShop/Views/Shared/_Layout.cshtml
@@ -56,7 +56,7 @@
                                     <li class="dropdown-item"> @User.Identity.Name</li>
                                     <li><a class="dropdown-item" asp-controller="Account" asp-action="Profile">Профиль</a></li>
                                     <li>
-                                        <form asp-controller="Account" asp-action="Logout">
+                                        <form asp-controller="Account" asp-action="Logout" method="post">
                                             <button class="dropdown-item" type="submit">Выйти</button>
                                         </form>
                                     </li>
