--- a/KuzinShop/Views/Admin/Categories.cshtml
+++ b/KuzinShop/Views/Admin/Categories.cshtml
@@ -26,7 +26,7 @@
                             <button type="submit" class="btn btn-sm btn-warning">✏️ Редактировать</button>
                         </form>
 
-                        <form method="post" action="@Url.Action("DeleteProduct", "Admin", new { id = category.Id })" style="display: inline-block; margin-left: 10px;">
+                        <form method="post" action="@Url.Action("DeleteCategory", "Admin", new { id = category.Id })" style="display: inline-block; margin-left: 10px;">
                             <button type="submit" class="btn btn-sm btn-danger">🗑️ Удалить</button>
                         </form>
                     </td>
